@@ -60,11 +60,15 @@
 (put 'upcase-region 'disabled nil)
 (put 'downcase-region 'disabled nil)
 
-;; cua
-(when (fboundp 'cua-mode)
-  (cua-mode t)
-  (define-key cua-global-keymap (kbd "<M-RET>") 'cua-set-rectangle-mark)
-  (setq cua-keep-region-after-copy (if window-system t nil)))
+;; emulation
+(if (fboundp 'cua-mode)
+    (progn
+      (cua-mode t)
+      (define-key cua-global-keymap (kbd "<M-RET>") 'cua-set-rectangle-mark)
+      (setq cua-keep-region-after-copy (if window-system t nil)))
+  (when (fboundp 'pc-selection-mode)
+    (setq pc-select-selection-keys-only t)
+    (pc-selection-mode)))
 (setq mouse-drag-copy-region nil)
 (setq x-select-enable-clipboard t)
 ;; (setq mouse-yank-at-point t)
